# MTFMag

./: .cproject  .gitignore  .project  MTFMag.doxyfile  Makefile.am  README.md  autogen.sh  configure.ac  main.cpp  main_test.cpp  test_input.txt
DataManagment/: DataCollector.cpp  DataCollector.h  DataCollector_test.cpp  DataProvider.h  Database.cpp  Database.h  Database_test.cpp  FileDataProvider.cpp  FileDataProvider.h  FileDataProvider_test.cpp
Elements/: Element.cpp  Element.h  Element_test.cpp  SimpleElement.cpp  SimpleElement.h
Exceptions/: DataProviderException.cpp  DataProviderException.h  DatabaseException.cpp  DatabaseException.h  EndOfFileException.cpp  EndOfFileException.h  FilepathException.cpp  FilepathException.h  InvalidIndexException.cpp  InvalidIndexException.h  InvalidNameException.cpp  InvalidNameException.h
Headers/: DataManagment.h  Elements.h  Exceptions.h  Matrix.h  Tools.h  Tree.h
Matrix/: MTFMatrix.cpp  MTFMatrix.h  MTFMatrix_test.cpp  MatrixBuilder.cpp  MatrixBuilder.h
Tools/: MTFProcessor.cpp  MTFProcessor.h  MTFProcessorFactory.cpp  MTFProcessorFactory.h  MTFProcessor_test.cpp  MatrixMTFProcessor.cpp  MatrixMTFProcessor.h  MatrixMTFProcessorFactory.cpp  MatrixMTFProcessorFactory.h  MatrixMTFProcessorFactory_test.cpp  MatrixMTFProcessor_test.cpp  MatrixMTXProcessor.cpp  MatrixMTXProcessor.h  MatrixMTXProcessor_test.cpp  Proccessor.cpp  Proccessor.h  Proccessor_test.cpp  Processor.cpp  Processor.h  ProcessorFactory.cpp  ProcessorFactory.h  RandomTreeProcessor.cpp  RandomTreeProcessor.h  RandomTreeProcessorFactory.cpp  RandomTreeProcessorFactory.h  Tester.cpp  Tester.h  Tester_test.cpp  TreeProccessor.cpp  TreeProccessor.h  TreeProcessorFactory.cpp  TreeProcessorFactory.h
Tree/: Classes.h  FTree.cpp  FTree.h  FTree_test.cpp  LTree.cpp  LTree.h  LTree_test.cpp  Leaf.cpp  Leaf.h  Leaf_test.cpp  Node.cpp  Node.h  Node_test.cpp  RandomTreeRoot.cpp  RandomTreeRoot.h  TreeFactory.cpp  TreeFactory.h  TreeFactory_test.cpp  TreeRoot.cpp  TreeRoot.h  TreeRoot_test.cpp
algorithms/: algorithm.h  algorithm_tools.h  matrix.h
controller/: config.cpp  config.h  configuration.cpp  configuration.h  configurations.h  console_program_runner.cpp  console_program_runner.h  file_program_runner.cpp  file_program_runner.h  program_runner.h  program_runner_test.cpp
data_managment/: csv_data_output.cpp  csv_data_output.h  csv_data_output_test.cpp  csv_file_data_output.cpp  csv_file_data_output.h  data_collector.cpp  data_collector.h  data_collector_test.cpp  data_output.h  data_output_builder.cpp  data_output_builder.h  data_provider.h  data_providers.h  database.cpp  database.h  database_test.cpp  file_data_output.cpp  file_data_output.h  file_data_provider.cpp  file_data_provider.h  file_data_provider_test.cpp  file_output_stream.cpp  file_output_stream.h  results.h
elements/: complex_difference_element.cpp  complex_difference_element.h  element.cpp  element.h  element_test.cpp  simple_element.cpp  simple_element.h
exceptions/: data_provider_exception.cpp  data_provider_exception.h  database_exception.cpp  database_exception.h  element_already_exists.h  (+11 more)
src/: Makefile.am  main.cpp  main_test.cpp
src/algorithms/: Makefile.am  algorithm_container.cpp  algorithm_container.h  algorithm_tools.cpp  algorithm_tools.h  algorithms_tools.cpp  matrix_algorithms.h  move_to_front_algorithms.h  tree.h  tree_algorithms.h
src/algorithms/matrix/: Makefile.am  mtf_matrix.cpp  mtf_matrix.h
src/algorithms/move_to_front/: Makefile.am  move_to_front.cpp  move_to_front_test.cpp
src/algorithms/tree/: Makefile.am  random_tree_root.cpp
src/controller/: Makefile.am  analisys_runner.cpp  analisys_runner.h  analisys_runner_test.cpp  analysis_runner.cpp  analysis_runner.h  configurations.h  console_program_runner.cpp  file_program_runner.cpp  file_program_runner.h
src/controller/configuration/: configuration.cpp  configuration.h  objects_builder.cpp  objects_builder.h
src/data_managment/: Makefile.am  data_outputs.h  database.cpp  results.h  results_collectors.h
src/data_managment/data_output/: Makefile.am  csv_data_output.cpp  csv_data_output.h  csv_file_data_output.cpp  csv_file_data_output.h  data_output.h  file_data_output.h
src/data_managment/data_provider/: Makefile.am  file_data_provider.cpp
src/data_managment/result/: Makefile.am  overall_result.cpp  overall_result.h  result.cpp  result.h
src/data_managment/results_collectors/: data_collector.cpp  data_collector.h  data_collector_test.cpp  judge_collector.cpp  judge_collector.h  result_collector.cpp  result_collector.h  result_collector_builder.cpp  result_collector_builder.h
src/elements/: Makefile.am  complex_difference_element.h  simple_element.h
src/events/: Makefile.am  event_listener.h  event_notifier.cpp  event_notifier.h
src/exceptions/: Makefile.am  data_provider_exception.cpp  data_provider_exception.h  database_exception.cpp  database_exception.h  element_already_exists.cpp  element_already_exists.h  end_of_file_exception.cpp  end_of_file_exception.h  file_path_exception.cpp  file_path_exception.h  invalid_index_exception.cpp  invalid_index_exception.h  invalid_name_exception.cpp  invalid_name_exception.h  non_existing_element.cpp  non_existing_element.h
src/headers/: Makefile.am  algorithms.h  controller.h  data_managment.h  elements.h  utils.h
src/results/: overall_result.cpp  overall_result.h  result.cpp  result.h  results.h
src/test/: analysis_runner_test.cpp  data_collector_test.cpp  database_test.cpp  element_test.cpp  event_notifier_test.cpp  file_data_provider_test.cpp  judge_collector_test.cpp  move_to_front_test.cpp  mtf_matrix_test.cpp  proccessor_test.cpp  result_collector_test.cpp  tester_test.cpp  tree_root_test.cpp  utils_test.cpp
src/tools/: Makefile.am  judges.h  processor.cpp  processor.h  processor_factory.h
src/tools/judges/: Makefile.am  deviation_judge.cpp  deviation_judge.h  deviation_judge_test.cpp  judge.h  tester.cpp  tester.h  tester_test.cpp
src/utils/: Makefile.am  event_listener.h  event_notifier.cpp  event_notifier.h  event_notifier_test.cpp  utils.cpp
(+974 files in other folders)
