AC_INIT([mtfmag], [1.0], [Jakub Banaszewski<jakub.banaszewski@gmail.com>])
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AC_PROG_CXX
AC_PROG_RANLIB
AM_PROG_AR

AC_CONFIG_FILES([
 src/algorithms/matrix/Makefile
 src/algorithms/move_to_front/Makefile
 src/algorithms/tree/Makefile
 src/algorithms/Makefile
 src/controller/Makefile
 src/data_managment/data_output/Makefile
 src/data_managment/data_provider/Makefile
 src/data_managment/result/Makefile
 src/data_managment/Makefile
 src/elements/Makefile
 src/exceptions/Makefile
 src/tools/judges/Makefile
 src/tools/Makefile
 src/utils/Makefile
 src/Makefile
 Makefile
])

AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_OUTPUT