AM_CXXFLAGS = -std=c++11 -Wall -Wextra

noinst_LIBRARIES = libexception.a
#noinst_HEADERS = $(top_srcdir)/headers/exceptions.h

libexception_a_SOURCES = \
	data_provider_exception.cpp data_provider_exception.h \
	database_exception.h database_exception.cpp \
	element_already_exists.cpp element_already_exists.h \
	end_of_file_exception.cpp end_of_file_exception.h \
	file_path_exception.h file_path_exception.cpp \
	invalid_index_exception.h invalid_index_exception.cpp \
	invalid_name_exception.h invalid_name_exception.cpp \
	non_existing_element.h non_existing_element.cpp
					   