AM_CXXFLAGS = -std=c++11 -Wall -Wextra

noinst_LIBRARIES = libexception.a
noinst_HEADERS = data_provider_exception.h \
	database_exception.h \
	element_already_exists.h \
	end_of_file_exception.h \
	file_path_exception.h \
	invalid_index_exception.h \
	invalid_name_exception.h \
	non_existing_element.h
	
libexception_a_SOURCES = \
	data_provider_exception.cpp \
	database_exception.cpp \
	element_already_exists.cpp \
	end_of_file_exception.cpp \
	file_path_exception.cpp \
	invalid_index_exception.cpp \
	invalid_name_exception.cpp \
	non_existing_element.cpp
					   